# Nomad-OPS

./: package.json  skills-lock.json
apps/functions/: .env.example  .gitignore  Dockerfile  agents.py  main.py  models.py  pyproject.toml
apps/functions/app/: .gitignore  __init__.py  agents.py  config.py  main.py  memory.py  realtime.py  schemas.py  tools.py  workflow.py
apps/web/: Dockerfile  package.json
apps/web/src/app/: MapView.tsx  MapViewInner.tsx  geocode.ts  globals.css  layout.tsx  page.tsx  types.ts  useOrchestration.ts
build_docs/: DESIGN.md  PRD.md  TRD.md
docs/superpowers/specs/: 2026-05-08-nomad-ops-design.md  2026-05-08-nomad-ops-oss-ollama-implementation-design.md
warm-up/: Dockerfile  entrypoint.sh  index.html  nginx.conf  script.js  styles.css
