[project]
name = "functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
